<resources>
    <string name="app_name">Pass Vault</string>

    <!-- Button Labels   -->
    <string name="button_1">1</string>
    <string name="button_2">2</string>
    <string name="button_3">3</string>
    <string name="button_4">4</string>
    <string name="button_5">5</string>
    <string name="button_6">6</string>
    <string name="button_8">8</string>
    <string name="button_9">9</string>
    <string name="button_7">7</string>
    <string name="button_clear">x</string>
    <string name="button_0">0</string>
    <string name="button_forgot_password">Forgot?</string>
    <string name="button_create_login">Create Login</string>
    <string name="button_save_account">Save Account</string>
    <string name="button_generate_password">Generate Password</string>
    <string name="button_reset">Reset</string>

    <!-- Switches -->
    <string name="switch_uppercase">Uppercase</string>
    <string name="switch_lowercase">Lowercase</string>
    <string name="switch_numbers">Numbers</string>
    <string name="switch_special_symbols">Special Symbols</string>

    <!-- Hints for EditText -->
    <string name="hint_secret_answer">Secret answer</string>
    <string name="hint_secret_question">Secret question</string>
    <string name="hint_repeat_passcode">Repeat passcode</string>
    <string name="hint_passcode">5 digit passcode</string>
    <string name="hint_platform">Account Platform</string>
    <string name="hint_username">Username</string>
    <string name="hint_password">Password</string>
    <string name="hint_repeat_password">Repeat Password</string>
    <string name="hint_search">Search account or platform</string>
    <string name="hint_new_repeat_passcode">Repeat new passcode</string>
    <string name="hint_new_passcode">New 5 digit passcode</string>

    <!-- Toast Messages -->
    <string name="success_save_account">Account has been saved!</string>
    <string name="success_copied_password_phrase">password for %1$s</string>
    <string name="success_copied_to_clipboard">Successfully copied %1$s to the clipboard!</string>
    <string name="success_passcode_reset">Passcode changed successfully!</string>
    <string name="success_deleted_account">Account deleted successfully!</string>
    <string name="success_updated_account">Account updated successfully!</string>
    <string name="error_save_unsuccessful">Account already exists! Use a different username.</string>
    <string name="error_update_unsuccessful">Account failed to update! Please try again.</string>
    <string name="error_passcode_length">Passcode must be 5 digits</string>
    <string name="error_text_empty">%1$s must not be empty</string>
    <string name="error_password_must_match">Passwords must match</string>
    <string name="error_passcode_must_match">Passcodes must match</string>
    <string name="error_wrong_passcode">Passcode entered is incorrect. Try again!</string>
    <string name="error_wrong_secret_answer">Secret answer is incorrect.</string>
    <string name="error_reset_unsuccessful">Something went wrong with the passcode reset. Try again!</string>

    <!-- Bottom / Top Navigation Menu Item Labels   -->
    <string name="menu_item_view">View</string>
    <string name="menu_item_save">Save</string>
    <string name="menu_item_generate_pass">Generator</string>
    <string name="menu_item_logout">Logout</string>
    <string name="menu_item_credits">Credits</string>
    <string name="menu_item_import_csv">Import CSV</string>
    <string name="menu_item_export_csv">Export CSV</string>

    <!-- Accessibility Text -->
    <string name="content_copy_password">Copy password icon</string>
    <string name="content_maximize_account">Maximize account icon</string>
    <string name="content_platform_icon">Platform icon</string>
    <string name="content_username_icon">Username icon</string>
    <string name="content_open_link">Open link</string>
    <string name="content_show_password">Show Password</string>
    <string name="content_hide_password">Hide Password</string>
    <string name="content_search">Search</string>>
    <string name="content_edit_account">Edit Account</string>>
    <string name="content_update_account">Update Account</string>
    <string name="content_delete_account">Delete Account</string>
    <string name="content_clear_search">Clear Search Query</string>
    <string name="content_passcode_digit_circle_filled">Passcode digit number %d is filled</string>
    <string name="content_passcode_digit_circle_empty">Passcode digit number %d is empty</string>
    <string name="content_menu">Menu</string>

    <!-- Text -->
    <string name="text_title_forgot">Forgot your password?</string>

    <!-- Top Nav Menu Titles -->
    <string name="title_create_login">Create Login</string>
    <string name="title_view_accounts">View Accounts</string>
    <string name="title_save_account">Save New Account</string>
    <string name="title_generate_password">Generate Password</string>
</resources>