...
    <fragment
        android:id="@+id/view_accounts_fragment"
        android:name="com.vinsonb.password.manager.kotlin.fragments.ViewAccountsFragment"
        android:label="fragment_view_accounts">
        <action
            android:id="@+id/action_viewAccountsFragment_to_loginFragment2"
            app:destination="@id/login_fragment"
            app:popUpTo="@id/login_fragment" />
    </fragment>

    <fragment
        android:id="@+id/create_login_fragment"
        android:name="com.vinsonb.password.manager.kotlin.fragments.CreateLoginFragment"
        android:label="fragment_create_login">
        <action
            android:id="@+id/action_createLoginFragment_to_loginFragment"
            app:destination="@id/login_fragment"
            app:popUpTo="@id/login_fragment" />
...
