<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".fragments.GeneratePasswordFragment">

    <TextView
        android:id="@+id/text_generated_password"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="4dp"
        android:background="@drawable/text_view_border"
        app:layout_constraintEnd_toStartOf="@id/image_copy"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:text="9kRpG>{QP*6XA66wA#XhUp9atF=$fHc[eRQ^f;K$fHc[eRQ^f;K$" />

    <ImageView
        android:id="@+id/image_copy"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="16dp"
        android:contentDescription="@string/content_copy_password"
        android:src="@drawable/ic_copy"
        app:layout_constraintBottom_toBottomOf="@id/text_generated_password"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@id/text_generated_password" />

    <com.google.android.material.slider.Slider
        android:id="@+id/slider_password_length"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:stepSize="1"
        android:value="20"
        android:valueFrom="0"
        android:valueTo="120"
        app:layout_constraintEnd_toStartOf="@id/layout_password_length"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/text_generated_password" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/layout_password_length"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="16dp"
        app:layout_constraintBottom_toBottomOf="@id/slider_password_length"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@id/slider_password_length">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/input_password_length"
            android:layout_width="60dp"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:inputType="number"
            android:maxLength="3"
            android:text="@string/default_password_length"
            android:textColorHint="#757575"
            tools:ignore="DuplicateSpeakableTextCheck,TextContrastCheck" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.switchmaterial.SwitchMaterial
        android:id="@+id/switch_uppercase"
        android:layout_width="180dp"
        android:layout_height="wrap_content"
        android:layout_margin="16dp"
        android:checked="true"
        android:text="@string/switch_uppercase"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/slider_password_length" />

    <com.google.android.material.switchmaterial.SwitchMaterial
        android:id="@+id/switch_lowercase"
        android:layout_width="180dp"
        android:layout_height="wrap_content"
        android:layout_margin="16dp"
        android:checked="true"
        android:text="@string/switch_lowercase"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/slider_password_length" />

    <com.google.android.material.switchmaterial.SwitchMaterial
        android:id="@+id/switch_numbers"
        android:layout_width="180dp"
        android:layout_height="wrap_content"
        android:layout_margin="16dp"
        android:text="@string/switch_numbers"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/switch_uppercase" />

    <com.google.android.material.switchmaterial.SwitchMaterial
        android:id="@+id/switch_special_symbols"
        android:layout_width="180dp"
        android:layout_height="wrap_content"
        android:layout_margin="16dp"
        android:text="@string/switch_special_symbols"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/switch_lowercase" />

    <Button
        android:id="@+id/button_generate_password"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="16dp"
        android:text="@string/button_generate_password"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/switch_special_symbols" />

</androidx.constraintlayout.widget.ConstraintLayout>